frontend/test/should_pass/retype_017.grg
using attrib_model_001;

rule r {	
	iterated {
		x:Node;
		modify {
			y:NINT<x>;
		}
	}

	multiple {
		-x:Edge->;
		modify {
			-y:EINT<x>->;
		}
	}
	
	modify {}
}
