frontend/test/should_fail/retype_024.grg
using attrib_model_001;

rule r {
	-x:Edge->;
	
	iterated {
		modify {
			-y:EINT<x>->;
		}
	}
	
	modify {}
}
